# ark

./: .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  SECURITY.md  TODO.md  app.json  babel.config.js  components.json  devenv.nix  eas.json  eslint.config.js  global.css  metro.config.js  package.json  polyfills.ts  prompt.md  skills-lock.json  sprite.txt  tsconfig.json  tsconfig.tests.json  uniwind-types.d.ts
.githooks/: pre-commit
.github/: pull_request_template.md
android/: gradle.properties  settings.gradle
app/: +not-found.tsx  _layout.tsx  _layout.web.tsx  accessibility-contract.test.ts  easter-egg.tsx  index.tsx  map-chat-ui-contract.test.ts  release-ci-contract.test.ts  routes-smoke.test.ts
assets/: map-catalog.json  offline-places.json
docs/: android-device-smoke.md  architecture.md  code-review-findings.md  code-review.md  content-pack-urls.md  development-build.md  index.md  map-tiles.md  maps-goal.md  model-downloads.md  open-source-release.md  privacy-and-safety.md  release-readiness.md  screenshots.md  v1-prep-plan.md
ios/: Podfile  Podfile.properties.json
lib/: theme.ts
modules/ark-routing/android/src/main/cpp/: CMakeLists.txt  ark_routing_jni.cpp
patches/: @10play%2Ftentap-editor@1.0.1.patch  uniwind@1.6.3.patch
plugins/: with-ark-android-release.js  with-ark-gradle-memory.js  with-ark-routing.js
scripts/: android-release-apks.sh  build-map-catalog.mjs  build-send.mjs  check-docs-drift.mjs  extract_wtnd_chapters.py  ios-simulator-build.sh  (+4 more)
(+439 files in other folders)
